@@ -1,5 +1,12 @@
 2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* include/thai/wtt.h, src/thctype/wtt.c: Add documentation from wtt.3.
+	Use enum instead of #define.
+
+	* man/man3/wtt.c: Revised.
+
+2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* include/thai/thctype.h: Add documentation taken from thctype.3.
 
 	* man/man3/thctype.3: Revised.
@@ -871,13 +878,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.86 2006-08-01 06:26:31 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.87 2006-08-01 11:38:21 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.86 2006-08-01 06:26:31 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.87 2006-08-01 11:38:21 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
